--- a/component/ActiveFilters/style.module.css
+++ b/component/ActiveFilters/style.module.css
@@ -52,6 +52,30 @@
   height: 110%;
 }
 
+.displayType {
+  height: 20px;
+  font-weight: 100;
+  margin-right: var(--margin);
+  justify-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (min-width: 390px) {
+  .displayType {
+    display: none;
+  }
+}
+
 /********************************************filter styles***********************************/
 .filter {
   padding: 2px 2px 2px 9px;
