--- a/component/Layout/NavBar/NavSide/style.module.scss
+++ b/component/Layout/NavBar/NavSide/style.module.scss
@@ -31,11 +31,11 @@
   }
 }
 
-@media (min-width: 750px ){
-  .sideBar, .overlay{
-    display: none;
-  }
-}
+// @media (min-width: 750px ){
+//   .sideBar, .overlay{
+//     display: none;
+//   }
+// }
 
 .navigation{
   position: absolute;
