--- a/component/Layout/NavBar/NavTop/style.module.scss
+++ b/component/Layout/NavBar/NavTop/style.module.scss
@@ -2,9 +2,7 @@
 .navTop{
     --nav-bottom-line: 2px;
     z-index: -1;
-    
     background-color: var(--body-background);
-    
     border-bottom: var(--nav-bottom-line) solid var(--theme-color);
     & > div{
         padding: 0 calc(var(--padding)*5)
@@ -74,13 +72,50 @@
 }
 
 .rightSection{
+    height: 100%;
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
     margin-left: auto;
     justify-content: space-between;
-    & > div{
-        margin: 0 20px;
+}
+
+.navLink{
+    padding: 0 20px;
+    position: relative;
+    display: grid;
+    height: 100%;
+    max-height: 100%;
+    flex-shrink: 0;
+    place-items: center;
+}
+
+.content{
+    position: absolute;
+    display: flex;
+    z-index: -1;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    pointer-events: none;
+    color: var(--text-color-light);
+    background-color: rgb(82, 82, 82);
+    transform: translateY(100%) translateX(-20px);
+    transition: transform var(--fast-animation-duration) ease-in-out ;
+}
+
+.headerGroup{
+    margin: 10px;
+    & > li{
+        list-style: none;
+    }
+}
+
+.navLink:hover {
+    .content{
+        transform: translateY(100%) translateX(0px);
+        opacity: 1;
+        pointer-events: auto;
     }
 }
 
