--- a/component/ProductCard/style.module.css
+++ b/component/ProductCard/style.module.css
@@ -12,14 +12,16 @@
   position: relative;
   z-index: 0;
   width: 100%;
+  overflow: hidden;
   margin-top: var(--margin);
+  border-radius: var(--border-radius);
   padding-top: min(var(--max-card-height), calc(var(--aspect-ratio))*1%);
 }
 
 .container {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   width: 100%;
   height: 100%;
 }
@@ -30,7 +32,7 @@
   overflow: hidden;
 }
 
-.imageSection > div:nth-child(2) {
+.imageSection > div:nth-child(1) {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -42,10 +44,59 @@
   transition: transform var(--fast-animation-duration) ease-in-out, -webkit-transform var(--fast-animation-duration) ease-in-out;
 }
 
+/***********************productInfo **************************************/
+.moreInfo {
+  --dimension: 15;
+  --opened-dimension: 160;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  padding: 2px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.878);
+  color: var(--theme-color);
+  -webkit-clip-path: ellipse(0% 0% at 100% 0%);
+          clip-path: ellipse(0% 0% at 100% 0%);
+  -webkit-transition: -webkit-clip-path var(--animation-duration) ease-in-out;
+  transition: -webkit-clip-path var(--animation-duration) ease-in-out;
+  transition: clip-path var(--animation-duration) ease-in-out;
+  transition: clip-path var(--animation-duration) ease-in-out, -webkit-clip-path var(--animation-duration) ease-in-out;
+}
+
+.moreInfo.open {
+  -webkit-clip-path: ellipse(165% 132% at 100% 0%);
+          clip-path: ellipse(165% 132% at 100% 0%);
+}
+
+.toggleInfoIcon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  padding: 2%;
+  height: 8%;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
+.informations {
+  overflow: auto;
+  text-align: center;
+}
+
 /****************************description**************************************/
 .description {
   height: calc(100% - var(--image-percentage));
-  margin-left: calc(var(--margin)/2);
+  margin-left: calc(var(--margin) / 2);
   width: 100%;
 }
 
@@ -74,6 +125,7 @@
   color: var(--text-color-light);
   margin-bottom: var(--margin);
   height: 1.8em;
+  border-radius: var(--border-radius);
 }
 
 .buy.no-parent-restiction {
