--- a/component/ProductList-grid/style.module.scss
+++ b/component/ProductList-grid/style.module.scss
@@ -1,5 +1,5 @@
 .container {
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   background-color: rgb(255, 255, 255);
   display: grid;
   overflow: hidden;
@@ -13,5 +13,6 @@
     grid-template-columns: unquote("repeat(auto-fill, minmax(48%, 1fr))");
     padding: 0px;
     gap: 2px;
+    font-size: 0.9em;
   }
 }
