--- a/component/ProductCard/style.module.css
+++ b/component/ProductCard/style.module.css
@@ -27,7 +27,7 @@
 }
 
 .imageSection {
-  height: var(--image-percentage);
+  height: 100%;
   position: relative;
   overflow: hidden;
 }
@@ -95,7 +95,6 @@
 
 /****************************description**************************************/
 .description {
-  height: calc(100% - var(--image-percentage));
   margin-left: calc(var(--margin) / 2);
   width: 100%;
 }
