--- a/component/Layout/Footer/style.module.scss
+++ b/component/Layout/Footer/style.module.scss
@@ -1,14 +1,8 @@
 .footerContainer {
   border-top: var(--border) solid var(--accent-color);
   background-color: var(--theme-color);
-  // background: linear-gradient(
-  //   125deg,
-  //   var(--theme-color) 0%,
-  //   var(--theme-color) 50%,
-  //   var(--accent-color) 50%,
-  //   var(--accent-color) 100%
-  // );
-  color: white;
+  font-size: 0.8em;
+  color: var(--text-color-medium);
 }
 
 .footerHeader {
@@ -19,28 +13,35 @@
 }
 
 .brandName {
-    font-size: 2em;
-    padding: 10px 25px;
+  font-size: 2em;
+  padding: 10px 25px;
 }
 .Icons {
   display: grid;
-  grid-template-columns: repeat(4, 50px);
+  grid-template-columns: repeat(5, 50px);
 }
 .Icons img {
   width: 100%;
 }
 
 .footerBody {
-  margin-top: var(--larger-margin);
+  margin: var(--margin);
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
+  ul {
+    margin: var(--large-margin);
+  }
   li {
+    // background-color: green;
+
+    // min-width: 250px;
+    text-align: left;
     list-style: none;
-    &:nth-child(1) {
+    h3 {
       position: relative;
       display: inline-block;
-      margin: var(--large-margin) ;
+      margin: var(--large-margin) 0;
       &:after {
         position: absolute;
         content: "";
@@ -48,7 +49,7 @@
         bottom: 0;
         left: 0;
         width: 100%;
-        background-color: var(--accent-color);
+        background-color: var(--secondary-accent-color);
       }
     }
   }
@@ -58,8 +59,19 @@
   width: max-content;
 }
 
-.footerBottom{
-  
-    justify-content: space-between;
+.footerBottom {
+  border-top: 1px solid var(--secondary-theme-color);
+  font-size: 0.8em;
+  div:nth-child(1){
     padding: var(--large-margin);
+    span{
+      padding: 1px var(--margin);
+      margin: 1px;
+      display: inline-block;
+      border-left: 1px solid var(--secondary-theme-color);
+    }
+  }
+  div:nth-child(2){
+    padding: var(--large-margin);
+  }
 }
