--- a/component/ProductList-flex/style.module.css
+++ b/component/ProductList-flex/style.module.css
@@ -1,10 +1,13 @@
 .container {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   overflow: auto;
+  scroll-behavior: smooth;
   -ms-scroll-snap-type: x mandatory;
       scroll-snap-type: x mandatory;
+  padding: var(--padding) 0;
 }
 
 .container::-webkit-scrollbar-track {
@@ -12,7 +15,7 @@
 }
 
 .container::-webkit-scrollbar {
-  height: 4px;
+  height: 0px;
   background-color: #f5f5f5;
 }
 
