--- a/component/ProductList-flex/style.module.scss
+++ b/component/ProductList-flex/style.module.scss
@@ -1,13 +1,16 @@
 .container {
+  width: 100%;
   display: flex;
   overflow: auto;
+  scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
+  padding: var(--padding) 0;
   &::-webkit-scrollbar-track {
     background-color: #f5f5f5;
   }
   
   &::-webkit-scrollbar {
-    height: 4px;
+    height: 0px;
     background-color: #f5f5f5;
   }
 
