--- a/component/ProductList-grid/style.module.css
+++ b/component/ProductList-grid/style.module.css
@@ -1,20 +1,23 @@
 .container {
-  -ms-grid-columns: (minmax(200px, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  text-align: center;
+  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   background-color: white;
   display: -ms-grid;
   display: grid;
   overflow: hidden;
   gap: var(--box-gap);
   padding: calc(var(--box-gap)/2);
+  font-size: 0.9em;
 }
 
 @media (max-width: 570px) {
   .container.double {
     -ms-grid-columns: (minmax(48%, 1fr))[auto-fill];
         grid-template-columns: repeat(auto-fill, minmax(48%, 1fr));
+    text-align: left;
     padding: 0px;
     gap: 2px;
-    font-size: 0.9em;
+    font-size: 0.7em;
   }
 }
