--- a/component/ActiveFilters/style.module.scss
+++ b/component/ActiveFilters/style.module.scss
@@ -60,7 +60,7 @@
   flex-shrink: 0;
   align-self: flex-start;
   border-radius: var(--border-radius);
-
+  transition: all 2s ease-in-out;
   color: var(--text-color-light);
   margin: calc(var(--margin) / 2);
   font-size: var(--small-font-size);
