--- a/component/ProductCard/style.module.scss
+++ b/component/ProductCard/style.module.scss
@@ -1,5 +1,6 @@
 .cardsContainer {
   width: 100%;
+  position: relative;
 }
 
 .cardsContainer.no-parent-restiction {
@@ -20,6 +21,10 @@
   );
 }
 
+.loading{
+  opacity:0;
+}
+
 .container {
   position: absolute;
   top: 0;
@@ -32,6 +37,7 @@
   height: 100%;
   position: relative;
   overflow: hidden;
+  background-color: #d9d9d9;
   & > div:nth-child(1) {
     //this target the Image Div container
     position: absolute;
