--- a/component/ProductList-grid/style.module.css
+++ b/component/ProductList-grid/style.module.css
@@ -1,4 +1,6 @@
 .container {
+  --left: 50%;
+  --transform: translate(-50%,-70%);
   text-align: center;
   -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -13,6 +15,8 @@
 
 @media (max-width: 570px) {
   .container.double {
+    --left: 0;
+    --transform: translateY(-50%);
     -ms-grid-columns: (minmax(48%, 1fr))[auto-fill];
         grid-template-columns: repeat(auto-fill, minmax(48%, 1fr));
     text-align: left;
