--- a/component/ProductSlideShow/style.module.css
+++ b/component/ProductSlideShow/style.module.css
@@ -12,6 +12,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  overflow: visible;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
