--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -197,3 +197,28 @@ img {
 .purple {
   background-color: purple;
 }
+
+
+.animated {
+  overflow: hidden;
+  &::after {
+    content: "";
+    z-index: 0;
+    background: linear-gradient(to left, #d9d9d9, hsl(0, 2%, 90%), #d9d9d9);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 10px;
+    top: 0;
+    animation: loading 0.9s linear infinite;
+  }
+}
+
+@keyframes loading {
+  0% {
+    transform: translate(-100%);
+  }
+  100% {
+    transform: translate(100%);
+  }
+}
