--- a/component/Explore_SectionTitle/style.module.css
+++ b/component/Explore_SectionTitle/style.module.css
@@ -30,3 +30,11 @@
 .rubriqueLink > a:last-child {
   text-decoration: none;
 }
+
+.empty {
+  position: relative;
+  border-radius: var(--border-radius);
+  background-color: #d9d9d9;
+  color: transparent;
+  max-width: 70%;
+}
