--- a/component/Layout/NavBar/NavTop/style.module.scss
+++ b/component/Layout/NavBar/NavTop/style.module.scss
@@ -63,6 +63,15 @@
     transition: height 0.5s ease;
 }
 
+@media (min-width: 750px) {
+    .navTop{
+        font-size: 1.2em;
+    }
+    .bagIcon{
+        height: 60px;
+    }
+}
+
 .ItemsInCart{
     left:  calc( 100%);
     position: absolute;
