--- a/component/MyImage/style.module.css
+++ b/component/MyImage/style.module.css
@@ -1,1 +1,13 @@
-/* No CSS */
+.myImage {
+  width: 100%;
+  position: relative;
+}
+
+.myImage img {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
