--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,6 +25,7 @@
   --body-background: #ffffff;
   --body-neutral-dark: #000000;
   --body-neutral-light: #ffffff;
+  --gray-scale-1: rgb(33, 32, 32);
   --page-max-width: 1300px;
   --larger-font-size: 1.7em;
   --large-font-size: 1.2em;
@@ -61,6 +62,7 @@ body {
   font-size: 100%;
   height: 100%;
   width: 100%;
+  color: rgb(213, 9, 9);
   overflow: hidden;
   & > div {
     overflow: auto;
