--- a/component/CartProduct/style.module.css
+++ b/component/CartProduct/style.module.css
@@ -1,12 +1,33 @@
 .container {
+  overflow: hidden;
   width: 100%;
+  height: 100%;
+  max-height: 0px;
+  opacity: 0;
+  -webkit-transform: translateX(-200px);
+          transform: translateX(-200px);
+  -webkit-transition: all var(--animation-duration) ease-in-out;
+  transition: all var(--animation-duration) ease-in-out;
+}
+
+.container.visible {
+  -webkit-transform: translateX(0px);
+          transform: translateX(0px);
+  max-height: 250px;
+  opacity: 1;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
   display: -ms-grid;
   display: grid;
+  color: white;
   padding: var(--padding);
+  margin: var(--padding) 0;
   -ms-grid-columns: 20% 60% 20%;
       grid-template-columns: 20% 60% 20%;
   background-color: var(--accent-color-4);
-  color: white;
 }
 
 .imageContainer {
