--- a/component/CartProduct/style.module.scss
+++ b/component/CartProduct/style.module.scss
@@ -1,54 +1,74 @@
 .container {
-    //   overflow: hidden;
-    width: 100%;
-    display: grid;
-    padding: var(--padding);
-    grid-template-columns: 20% 60% 20%;
-    background-color: var(--accent-color-4);
-    color: white;
-  }
-  
-  .imageContainer {
-    border-radius: var(--border-radius);
-    overflow: hidden;
-  }
-  
-  .productName{
-      color: var(--theme-color-1);
-      // color: black;
-  }
-  
-  .middleSection {
-    display: flex;
-    text-align: center;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  
-  .rm {
-    @extend .middleSection;
-    background-color: var(--accent-color-3);
-    flex: 1;
-    .trashBeen{
-      flex: 1;
-    }
-    img {
-      width: 60%;
-      max-width: 100px;
-    }
-  }
-  
-  .price{
-      // color: var(--theme-color-1); 
-      text-shadow: 0.05em 0.05em 0.2em var(--accent-color-2);
-  }
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  max-height: 0px;
+  opacity: 0;
+  transform: translateX(-200px);
+  // transition: transform var(--animation-duration) ease-in-out,
+  //   max-height var(--animation-duration) ease-in-out,
+  //   opacity var(--animation-duration) ease-in-out;
+  transition: all var(--animation-duration) ease-in-out;
 
-.buyPrompt{
-    background-color: var(--theme-color);
-    width: 100%;
+  &.visible {
+    transform: translateX(0px);
+    max-height: 250px;
+    opacity: 1;
+  }
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  color: white;
+  padding: var(--padding);
+  margin: var(--padding) 0;
+  grid-template-columns: 20% 60% 20%;
+  background-color: var(--accent-color-4);
+}
+
+.imageContainer {
+  border-radius: var(--border-radius);
+  overflow: hidden;
+}
+
+.productName {
+  color: var(--theme-color-1);
+  // color: black;
+}
+
+.middleSection {
+  display: flex;
+  text-align: center;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.rm {
+  @extend .middleSection;
+  background-color: var(--accent-color-3);
+  flex: 1;
+  .trashBeen {
     flex: 1;
-    max-height: 30%;
-    color: var(--accent-color-3);
+  }
+  img {
+    width: 60%;
+    max-width: 100px;
+  }
+}
+
+.price {
+  // color: var(--theme-color-1);
+  text-shadow: 0.05em 0.05em 0.2em var(--accent-color-2);
+}
+
+.buyPrompt {
+  background-color: var(--theme-color);
+  width: 100%;
+  flex: 1;
+  max-height: 30%;
+  color: var(--accent-color-3);
 }
