--- a/component/Layout/NavBar/NavSide/style.module.css
+++ b/component/Layout/NavBar/NavSide/style.module.css
@@ -155,6 +155,7 @@
 .linkContainer div {
   padding: var(--padding);
   height: 100%;
+  width: 50%;
 }
 
 /**********************************Side_Link***************************/
