--- a/component/LoadingController/style.module.scss
+++ b/component/LoadingController/style.module.scss
@@ -24,30 +24,32 @@
 .ldsEllipsis {
   display: inline-block;
   position: relative;
-  width: 80px;
-  height: 80px;
+  width: 100%;
+  padding-top: 20%;
   div {
     position: absolute;
-    top: 33px;
-    width: 13px;
-    height: 13px;
+    top: 0px;
+    width: 20%;
+    padding-top: 20%;
     border-radius: 50%;
-    background: var(--accent-color);
+    background: white;
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
     &:nth-child(1) {
-      left: 8px;
+      left: 0%;
+      // display: none;
       animation: lds-ellipsis1 0.6s infinite;
     }
     &:nth-child(2) {
-      left: 8px;
+      left: 0%;
       animation: lds-ellipsis2 0.6s infinite;
     }
     &:nth-child(3) {
-      left: 32px;
+      left: 40%;
       animation: lds-ellipsis2 0.6s infinite;
     }
     &:nth-child(4) {
-      left: 56px;
+      left: 80%;
+      // display: none;
       animation: lds-ellipsis3 0.6s infinite;
     }
   }
@@ -74,7 +76,7 @@
     transform: translate(0, 0);
   }
   100% {
-    transform: translate(24px, 0);
+    transform: translate(200%, 0);
   }
 }
 
