--- a/component/Layout/NavBar/NavTop/style.module.css
+++ b/component/Layout/NavBar/NavTop/style.module.css
@@ -3,6 +3,8 @@
   z-index: -1;
   position: relative;
   height: 40px;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
   background-color: var(--body-background);
   border-bottom: var(--nav-bottom-line) solid var(--theme-color);
   -webkit-transition: -webkit-transform var(--animation-duration) ease-in-out;
@@ -17,8 +19,8 @@
 }
 
 .navTop.hidden {
-  -webkit-transform: translateY(-150%) translateZ(0) !important;
-          transform: translateY(-150%) translateZ(0) !important;
+  -webkit-transform: translateY(-150%) translateZ(0);
+          transform: translateY(-150%) translateZ(0);
 }
 
 @media (min-width: 570px) {
