--- a/component/Layout/NavBar/NavTop/style.module.scss
+++ b/component/Layout/NavBar/NavTop/style.module.scss
@@ -3,6 +3,7 @@
   z-index: -1;
   position: relative;
   height: 40px;
+  transform: translateZ(0);
   background-color: var(--body-background);
   border-bottom: var(--nav-bottom-line) solid var(--theme-color);
   transition: transform var(--animation-duration) ease-in-out;
@@ -11,7 +12,7 @@
     padding: 0 5px 0 15px;
   }
   &.hidden {
-    transform: translateY(-150%) translateZ(0) !important;
+    transform: translateY(-150%) translateZ(0);
   }
 }
 
