--- a/component/ProductList-flex/style.module.css
+++ b/component/ProductList-flex/style.module.css
@@ -1,16 +1,14 @@
 .container {
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   overflow-y: hidden;
-  scroll-behavior: smooth;
-  -ms-scroll-snap-type: x mandatory;
-      scroll-snap-type: x mandatory;
   padding: var(--padding) 0;
   font-size: 0.1em;
   text-align: center;
-  --transform: translate(-50%, -70%) translateZ(0);
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  --transform: translate(-50%, -70%) ;
 }
 
 @media (hover: none) {
