--- a/component/ProductList-flex/style.module.scss
+++ b/component/ProductList-flex/style.module.scss
@@ -1,13 +1,14 @@
 .container {
-  width: 100%;
+  // width: 100%;
   display: flex;
   overflow-y: hidden;
-  scroll-behavior: smooth;
-  scroll-snap-type: x mandatory;
+  // scroll-behavior: smooth;
+  // scroll-snap-type: x mandatory;
   padding: var(--padding) 0;
   font-size: 0.1em;
   text-align: center;
-  --transform: translate(-50%, -70%) translateZ(0);
+  transform: translateZ(0);
+  --transform: translate(-50%, -70%) ;
 }
 
 @media (hover: none) { // uncomment this to make the scroll bar invisible on touch screens
