--- a/component/MyImage/style.module.css
+++ b/component/MyImage/style.module.css
@@ -6,10 +6,10 @@
 
 .myImage img {
   width: 100%;
-  height: 100%;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 .loadingPlaceholder {
