--- a/component/MyImage/style.module.scss
+++ b/component/MyImage/style.module.scss
@@ -4,10 +4,10 @@
   position: relative;
   img {
     width: 100%;
-    height: 100%;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+
   }
 }
 
